<resources>
    <string name="app_name">Trip Logger</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title for the trip.</string>
    <string name="crime_destination_hint">Enter a destination for the trip.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Fun</string>

    <string-array name="Options">
        <item>Work</item>
        <item>Personal</item>
        <item>Commute</item>
    </string-array>
</resources>
