<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/trip_photo"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="10dp"/>

    <ImageButton
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:id="@+id/trip_camer"
        android:layout_marginLeft="135dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="Destination"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/crime_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_destination_hint"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Trip Type" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/triptype_spinner" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Duration"
        android:id="@+id/textView3" />

    <EditText
        android:id="@+id/crime_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Duration" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:text="Comment"
        android:id="@+id/textView4" />

    <EditText
        android:id="@+id/crime_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Comment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle" />
    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/gps_location"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_horizontal" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_solved_label"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="207dp"
        android:layout_height="68dp"
        android:id="@+id/delete_trip_btn"
        android:layout_gravity="center_horizontal"
        android:text="Save" />
</LinearLayout>

</ScrollView>